tests/ui/parser/using_contract_empty_list.sol
contract C {
    using {} for uint256; //~ ERROR: expected identifier
}
